--- a/大事件静态页面/web_back/login.html
+++ b/大事件静态页面/web_back/login.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/iconfont.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" href="./js/bootstrap/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -25,12 +26,69 @@
                 <i class="iconfont icon-key"></i>
                 <input type="text" class="input_txt" placeholder="邮箱/手机号">
                 <input type="password" class="input_pass" placeholder="密码">
-                <input type="submit" class="input_sub" value="登 录">
+                <input type="submit" class="input_sub" value="登 录" >
             </form>
         </div>
 
-    </div> 
+    </div>
 
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header" ">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                            aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="gridSystemModalLabel" style="color: red;border-bottom:orange">温馨提示</h4>
+                </div>
+                <div id="content" style="text-indent:15px; color:orange;padding:20px"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" style="background-color: skyblue;border:1px solid skyblue">关闭</button>
+                    
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <!-- 引入jq文件 -->
+    <script src="./js/jquery-1.12.4.min.js"></script>
+    <script src="./js/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        //入口函数
+        $(function () {
+            //给登入按钮注册点击事件
+            $('.input_sub').on('click', function (e) {
+                //阻止默认跳转事件
+                e.preventDefault();
+                //获取用户名和用户密码
+                var userName = $('.input_txt').val().trim();
+                var passWord = $('.input_pass').val().trim();
+                //判断用户是否输入
+                if (userName == '' || passWord == '') {
+                    $('#content').text('兄弟说点啥');
+                    $('#myModal').modal({
+                        keyboard: false
+                    })
+                }
+                $.ajax({
+                    type: 'post',
+                    url: 'http://localhost:8080/admin/user/login',
+                    data: {
+                        username: userName,
+                        password: passWord,
+                    },
+                    success: function (su) {
+                        console.log(su);
+                        if (su.code == 200) {
+                            $('#myModal').modal({
+                                keyboard: false
+                            })
+                            window.location.href = 'index.html';
+                        }
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
