--- a/大事件静态页面/web_back/login.html
+++ b/大事件静态页面/web_back/login.html
@@ -26,7 +26,7 @@
                 <i class="iconfont icon-key"></i>
                 <input type="text" class="input_txt" placeholder="邮箱/手机号">
                 <input type="password" class="input_pass" placeholder="密码">
-                <input type="submit" class="input_sub" value="登 录" >
+                <input type="submit" class="input_sub" value="登 录">
             </form>
         </div>
 
@@ -36,14 +36,15 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header" ">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                            aria-hidden="true">&times;</span></button>
+                    <button type=" button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
                     <h4 class="modal-title" id="gridSystemModalLabel" style="color: red;border-bottom:orange">温馨提示</h4>
                 </div>
                 <div id="content" style="text-indent:15px; color:orange;padding:20px"></div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" style="background-color: skyblue;border:1px solid skyblue">关闭</button>
-                    
+                    <button type="button" class="btn btn-default" data-dismiss="modal"
+                        style="background-color: skyblue;border:1px solid skyblue">关闭</button>
+
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -81,8 +82,14 @@
                         if (su.code == 200) {
                             $('#myModal').modal({
                                 keyboard: false
-                            })
+                            });
+                            $('#content').text('登入成功');
                             window.location.href = 'index.html';
+                        }else {
+                            $('#myModal').modal({
+                                keyboard: false
+                            });
+                            $('#content').text('账号或密码错误');
                         }
                     }
                 });
