--- a/大事件静态页面/web_back/article_category.html
+++ b/大事件静态页面/web_back/article_category.html
@@ -65,14 +65,15 @@
                         <td class="text-center">
                             <a href="javascript:editTr({&quot;id&quot;:&quot;4&quot;,&quot;slug&quot;:&quot;travel&quot;,&quot;name&quot;:&quot;爱旅行&quot;});"
                                 class="btn btn-info btn-xs">编辑</a>
-                            <a href="javascript:deleteTr( 4 );" class="btn btn-danger btn-xs">删除</a>
+                            <a href="#;" class="btn btn-danger btn-xs">删除</a>
                         </td>
                     </tr>
                 </tbody>
                 <tfoot>
                     <tr>
                         <td colspan="3" class="text-center">
-                            <a href="#" class="btn btn-success" data-toggle="modal" data-target="#addModal">新增分类</a>
+                            <a href="#" class="btn btn-success btn-add" data-toggle="modal"
+                                data-target="#addModal">新增分类</a>
                         </td>
                     </tr>
                 </tfoot>
@@ -80,57 +81,203 @@
         </div>
     </div>
 
-    <div class="modal fade" id="addModal" >
+    <div class="modal fade" id="addModal">
         <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-              <h4 class="modal-title">新增分类</h4>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="control-label">分类名称:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+                    <h4 class="modal-title">新增分类</h4>
                 </div>
-                <div class="form-group">
-                  <label for="message-text" class="control-label">分类别名:</label>
-                  <input type="text" class="form-control" id="recipient-name">
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="hidden" id="hide-id">
+                            <label for="recipient-name" class="control-label">分类名称:</label>
+                            <input type="text" class="form-control" id="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="message-text" class="control-label">分类别名:</label>
+                            <input type="text" class="form-control" id="slug">
+                        </div>
+                    </form>
                 </div>
-              </form>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
+                    <button type="button" class="btn btn-primary" id="btn_add">新增</button>
+                </div>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" id="model_shutoff">关闭</button>
-              <button type="button" class="btn btn-primary" id="model_add">新增</button>
-            </div>
-          </div>
         </div>
-      </div>
+    </div>
 
-      <script>
-          $('#addModal').modal({
-            show:false,
-            backdrop:false
-          });
+    <script>
+        $('#addModal').modal({
+            show: false,
+            backdrop: false
+        });
 
-          $('#model_shutoff').click(function(){
-            alert('shutoff');
+        $('#model_shutoff').click(function () {
+            // alert('shutoff');
             $('#addModal').modal('hide');
-          });
+        });
 
-          $('#model_add').click(function(){
-            alert('add');
-            $('#addModal').modal('hide');
-          });
+        // $('#model_add').click(function () {
+        //     alert('add');
+        //     $('#addModal').modal('hide');
+        // });
 
-          $('.category_table').delegate('a','click',function(){
-              if($(this).hasClass('btn-info')){
-                $('#addModal .modal-title').html('修改分类名称');
+        // $('.category_table').delegate('a', 'click', function () {
+        //     //hasClass() 方法检查被选元素是否包含指定的 class。
+        //     if ($(this).hasClass('btn-info')) {
+
+        //     }
+        // })      
+    </script>
+    <!-- 导入模板引擎js文件-->
+    <script src="./js/template-web.js"></script>
+    <!-- 准备一个模板 -->
+    <script id="temp_mo" type="text/html">
+        {{each data v}}
+        <tr>
+                <td>{{v.name}}</td>
+                <td>{{v.slug}}</td>
+                <td class="text-center">
+                    <a href='#' class="btn btn-info btn-xs btn-adit" data-id='{{v.id}}'>编辑</a>
+                    <a href="#;" data-id='{{v.id}}' class="btn btn-danger btn-xs btn-delete">删除</a>
+                </td>
+            </tr>
+        {{/each}}
+        </script>
+    <script>
+        //   入口函数
+        $(function () {
+            function getData() {
+                $.ajax({
+                    type: 'get',
+                    url: 'http://localhost:8080/admin/category/list',
+                    //调用模板的核心方法
+                    success: function (su) {
+                        console.log(su);
+                        var temp = template('temp_mo', su);
+                        $('tbody').html(temp);
+                    }
+                });
+            }
+            //页面一加载获取所有文章类别显示在页面上
+            //发送ajax请求
+            getData();
+
+            //给新增按钮注册点击事件
+            $('#btn_add').on('click', function (e) {
+                e.preventDefault();
+                //获取用户输入的信息
+                var name = $('#name').val().trim();
+                var slug = $('#slug').val().trim();
+                //当
+                if ($('#btn_add').hasClass('btn-success')) {
+                    //发送ajax请求
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/add',
+                        data: {
+                            name: name,
+                            slug: slug
+                        },
+                        success: function (su) {
+                            console.log(su);
+                            if (su.code == 201) {
+                                alert('创建成功');
+                                $('#addModal').modal('hide');
+                                // window.location.reload();
+                                getData();
+                                $('form input').val('');
+                            }
+                        }
+                    });
+                } else {
+                    //根据id查询指定文章类别
+                    //获取id
+                    // var id = $(this).attr('data-id'); 
+                    var id=$('#hide-id').val();
+                  
+
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/edit',
+                        data: {
+                            id: id,
+                            name: name,
+                            slug: slug
+                        },
+                        success: function (su) {
+                            console.log(su);
+                            alert('编辑成功'); 
+                            if(su.code==200){
+                                $('#addModal').modal('hide');
+                                getData();
+                            }
+                        }
+                    });
+                }
+            });
+            //给编辑按钮注册点击事件 修改title文本和新增文本
+            $('body').on('click', '.btn-info', function () {
+                $('#addModal .modal-title').html('修改分类');
+                $('#btn_add').text('修改').removeClass('btn-success');
                 $('#addModal').modal('show');
-              }
-          })      
-      </script>
+                //获取当前点击编辑按钮的id
+                var id= $(this).attr('data-id');
+                //将获取的id设置给hide-id的默认值
+               $('#hide-id').val(id);
+               //发送ajax请求
+               $.ajax({
+                        url: 'http://localhost:8080/admin/category/search',
+                        data: {
+                            id: id
+                        },
+                        success: function (su) {
+                            console.log(su);
+                            $('#name').val(su.data[0].name);
+                            $('#slug').val(su.data[0].slug);
+                        }
+                    });
+               
+            })
+            //给新增分类注册点击事件修改title文本和修改按钮文本
+            $('.btn-add').on('click',function(){
+                $('form input').val('');
+                $('#addModal .modal-title').html('新增分类');
+                $('#btn_add').text('新增').addClass('btn-success');
+            });
 
+
+
+            //给每一个删除按钮委托注册点击事件
+            $('body').on('click', '.btn-delete', function (e) {
+                e.preventDefault();
+                var that = this;
+                if (confirm('确认要删除吗?')) {
+                    //获取id名
+                    var id = $(this).attr('data-id');
+                    console.log(id);
+                    //发送ajax请求
+                    $.ajax({
+                        type: 'post',
+                        url: 'http://localhost:8080/admin/category/delete',
+                        data: {
+                            id: id
+                        },
+                        success: function (su) {
+                            console.log(su);
+                            if (su.code == 204) {
+                                // window.location.reload();
+                                $(that).parent().parent().remove();
+                            }
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
